# star

./: CMakeLists.txt  Makefile.config.in  README.txt  config.hpp.in  report.css  star.hpp
cmake/: FindGnuplot.cmake  FindLibSBML.cmake  FindLua.cmake  FindNLopt.cmake
experiments/: import_sbml.lua
experiments/fit/: gene_expr.lua  gene_expr_gen.lua
experiments/fit/gene_expr_data/: 000001.csv  000002.csv  000003.csv  000004.csv  000005.csv
experiments/optimize/: gene_expr.lua
experiments/scan/: gene_expr.lua
experiments/sensitivity/: three_stage.lua
experiments/transient/: birth_death.lua  dimerization.lua  p53.lua  three_stage.lua
experiments/transient/birth_death_exact/: NOTE.txt  d_0.csv  d_1.csv  d_10.csv  d_2.csv  d_3.csv  d_4.csv  d_5.csv  d_6.csv  d_7.csv  d_8.csv  d_9.csv  m_1.csv  mlist_1.csv  mlist_10.csv  mlist_2.csv  mlist_3.csv  mlist_4.csv  mlist_5.csv  mlist_6.csv  mlist_7.csv  mlist_8.csv  mlist_9.csv
models/: birth_death.star  dimerization.star  exswitch.star  gene_expr.star  p53.star  three_stage.star
models/sbml/: NOTE.txt
src/: experiment.cpp  experiment.hpp  experiment_options.hpp  star.cpp
src/solver/: Makefile  base.cpp  base.hpp  dump.hpp  external.cpp  external.hpp  fit.hpp  hash_list_based.hpp  linsys.hpp  mfile_exporter.hpp  model.hpp  options.hpp  scan.hpp  state_hash_list.hpp  task.hpp
src/solver/container/: abstract_state_hash_list.hpp  allocator.hpp
src/solver/lib/gnuplot_i/: gnuplot_i.hpp
src/solver/lib/lsoda/: CMakeLists.txt  lsoda.c  lsoda.hpp
src/solver/optimization/: all.hpp  base.hpp  nlopt_wrapper.hpp
src/solver/transient/: all.hpp  base.hpp  beuler.hpp  euler.hpp  fau.hpp  impl_base.hpp  lsoda_wrapper.hpp  rk23.hpp  rk45.hpp  rk_base.hpp  ssa.hpp
src/solver/util/: bjenkins_lookup3_wrapper.hpp  html_helper.hpp  polynom.hpp
src/solver_loader/: all.hpp  base.cpp  base.hpp  fit.hpp  optimize.hpp  options.hpp  scan.hpp  transient.hpp
src/solver_loader/model_info/: clock.hpp  cnst.hpp  fnc.hpp  ic.hpp  obj.hpp  transition.hpp  trsys.hpp  type.hpp  val.hpp  var.hpp
src/solver_loader/parser/: ast.hpp  parser.cpp  parser.hpp  sbml.cpp  sbml.hpp
src/solver_loader/task_info/: all.hpp  base.hpp  dump_distr.hpp  dump_moments.hpp  dump_samples.hpp  dump_stats.hpp  plot.hpp  plot_2d.hpp  plot_distr.hpp  plot_distr_2d.hpp  plot_objf.hpp  plot_objf_2d.hpp
src/solver_loader/writer/: base.hpp  cpp.hpp  matlab.hpp
